# multiword_anagram_fast

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
anagram_solver_core/: Cargo.toml
anagram_solver_core/src/: char_utils.rs  lib.rs  solver.rs  trie.rs
multiword_anagram_fast/: pyproject.toml  solver.py
multiword_anagram_fast/dictionaries/: ACDLC0A.txt
multiword_anagram_fast/tests/: test_solver.py
multiword_anagram_fast_core/src/: char_utils.rs  lib.rs
multiword_anagram_solver/: main.py  pyproject.toml  solver.py
pyanagram_solver/: pyproject.toml  solver.py
src/: char_utils.rs  lib.rs  solver.rs  trie.rs
